OP-510 changes based on review comments

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -32,10 +32,10 @@ angal.common.update.btn.key                                                     
 #################################
 # Other common messages and text
 #################################
-angal.common.select.row.msg                                                      = Please select a row.
-angal.common.data.not.saved.msg                                                  = The data could not be saved.
-angal.common.select.patient.msg                                                  = Please select a patient.
-angal.common.largeamountofdata.proceed.msg                                       = This could retrieve a large amount of data, proceed?
+angal.common.pleaseselectarow.msg                                                = Please select a row.
+angal.common.datacouldnotbesaved.msg                                             = The data could not be saved.
+angal.common.pleaseselectapatient.msg                                            = Please select a patient.
+angal.common.thiscouldretrievealargeamountofdataproceed.msg                      = This could retrieve a large amount of data, proceed?
 
 angal.common.userid.label                                                        = User:
 angal.common.age.label                                                           = Age:
@@ -64,7 +64,7 @@ angal.common.search.txt                                                         
 ######################
 angal.login.title                                                                = Login
 angal.login.password.label                                                       = Password:
-angal.login.passwordincorrectretry.msg                                           = The password is incorrect; please retry.
+angal.login.passwordiisncorrectpleaseretry.msg                                   = The password is incorrect; please retry.
 
 ######################
 # Main Menu
@@ -92,42 +92,43 @@ angal.opd.selectadisease.txt                                                    
 angal.opd.diagnosis.txt                                                          = Diagnosis
 angal.opd.diagnosisnfulllist2.txt                                                = Diagnosis n.2 (full list)
 angal.opd.diagnosisnfulllist3.txt                                                = Diagnosis n.3 (full list)
-angal.opd.note.symptom.txt                                                       = Notes & Symptoms
+angal.opd.notessymptom.txt                                                       = Notes & Symptoms
 angal.opd.referral.txt                                                           = Referral
-angal.opd.referral.to.txt                                                        = Referred To
+angal.opd.referralto.txt                                                         = Referred To
 angal.opd.address.txt                                                            = Address
 angal.opd.city.txt                                                               = City
-angal.opd.first.name.txt                                                         = First Name
-angal.opd.second.name.txt                                                        = Last Name
+angal.opd.firstname.txt                                                          = First Name
+angal.opd.secondname.txt                                                         = Last Name
 angal.opd.lastopdnote.txt                                                        = Note
 angal.opd.lastopdvisitm.txt                                                      = LAST OPD VISIT
-angal.opd.newpatient.txt                                                         = <enter a new patient>
-angal.opd.nextkin.txt                                                            = Next of Kin
+angal.opd.enteranewpatient.txt                                                   = <enter a new patient>
+angal.opd.nextofkin.txt                                                          = Next of Kin
 angal.opd.nextvisitdate.txt                                                      = Next visit date
-angal.opd.nonote.txt                                                             = <none>
+angal.opd.none.txt                                                               = <none>
 angal.opd.on.txt                                                                 = on
 angal.opd.selectapatient.txt                                                     = Select a Patient
 
-angal.opd.insertvalidage.msg                                                     = Insert a valid age.
+angal.opd.insertavalidage.msg                                                    = Insert a valid age.
 angal.opd.disease1mayhavebeencancelled.msg                                       = Disease n.1 may have been canceled.
 angal.opd.disease2mayhavebeencancelled.msg                                       = Disease n.2 may have been canceled.
 angal.opd.disease3mayhavebeencancelled.msg                                       = Disease n.3 may have been canceled.
 angal.opd.pleaseinsertattendancedate.msg                                         = Please insert an admittance date.
 angal.opd.pleaseinsertavalidattendancedate.msg                                   = Please insert a valid admittance date.
-angal.opd.insertage.msg                                                          = Please insert the patient's age.
-angal.opd.selectsex.msg                                                          = Please select patient's sex.
-angal.opd.pleaseselectadisease.msg                                               = Please select a disesase.
-angal.opd.duplicatediseasesnotallowed.msg                                        = Specifying duplicate diseases is not allowed.
 angal.opd.datefrommustbebefordateto.msg                                          = 'Date from' must be earlier than 'Date to'.
 angal.opd.agefrommustbelowerthanageto.msg                                        = 'Age from' must be lower than 'Age to'.
-angal.opd.insertavalidattendancedate.msg                                         = Please insert a valid admittance date.
-angal.opd.notpasseddate.msg                                                      = You can not set a date in the past for next visit.
+angal.opd.cannotsetadateinthepastfornextvisit.msg                                = You can not set a date in the past for next visit.
 angal.opd.opdnumberalreadyexist.msg                                              = OPD No. already exists.
 angal.opd.notspecified.msg                                                       = not specified
 angal.opd.opdnumbermustbeanumber.msg                                             = OPD No. must be a number.
 
 angal.opd.deletefollowingopd.fmt.msg                                             = Delete the following opd?\n\nRegistration Date={0}\nDisease={1}\nAge={2}, Sex={3}\nVisit Date={4}
 angal.opd.patientcode.fmt.msg                                                    = Patient (code: {0})
+
+# OPD: related messages in CORE project
+angal.opd.pleaseinsertthepatientsage.msg                                         = Please insert the patient's age.
+angal.opd.pleaseselectpatientssex.msg                                            = Please select patient's sex.
+angal.opd.pleaseselectadisease.msg                                               = Please select a disesase.
+angal.opd.specifyingduplicatediseasesisnotallowed.msg                            = Specifying duplicate diseases is not allowed.
 
 #########################
 # Settings: User Browser
@@ -140,29 +141,29 @@ angal.userbrowser.user.txt                                                      
 angal.userbrowser.group.txt                                                      = Group
 angal.userbrowser.description.txt                                                = Description
 angal.userbrowser.selectgroup.label                                              = Select group:
-angal.userbrowser.newuserrecord.title                                            = Add New User
-angal.userbrowser.editinguserrecord.title                                        = Edit User
+angal.userbrowser.addnewuser.title                                               = Add New User
+angal.userbrowser.edituser.title                                                 = Edit User
 angal.userbrowser.group.label                                                    = Group:
 angal.userbrowser.name.label                                                     = Name:
 angal.userbrowser.password.label                                                 = Password:
 angal.userbrowser.retype.password.label                                          = Retype Password:
 angal.userbrowser.description.label                                              = Description:
-angal.userbrowser.insert.valid.username.msg                                      = Please provide a valid user name.
-angal.userbrowser.insert.password.msg                                            = Please provide a password.
-angal.userbrowser.retype.password.missing.msg                                    = Please provide the 'retype' password.
-angal.userbrowser.password.not.matching.msg                                      = Passwords do not match; please correct.
-angal.userbrowser.reset.password.title                                           = Reset Password
-angal.userbrowser.step1.insert.new.password.label                                = Please insert a new password (minimum of 6 characters).
-angal.userbrowser.password.too.short.msg                                         = Password must be at least 6 characters; please retry.
-angal.userbrowser.step2.repeat.password.label                                    = Please repeat the new password.
-angal.userbrowser.passwords.do.not.match.msg                                     = Passwords do not match; please retry.
-angal.userbrowser.password.changed.msg                                           = The password has been changed.
-angal.userbrowser.delete.user.title                                              = Delete User
-angal.userbrowser.delete.user.fmt.label                                          = Delete user "{0}"?
+angal.userbrowser.pleaseprovideavalidusername.msg                                = Please provide a valid user name.
+angal.userbrowser.pleaseprovideapassword.msg                                     = Please provide a password.
+angal.userbrowser.pleaseprovidetheretypepassword.msg                             = Please provide the 'retype' password.
+angal.userbrowser.passwordsdonotmatchpleasecorrect.msg                           = Passwords do not match; please correct.
+angal.userbrowser.resetpassword.title                                            = Reset Password
+angal.userbrowser.step1.pleaseinsertanew.password.label                          = Please insert a new password (minimum of 6 characters).
+angal.userbrowser.passwordmustbeatleast6characters.msg                           = Password must be at least 6 characters; please retry.
+angal.userbrowser.step2.pleaserepeatthenewpassword.label                         = Please repeat the new password.
+angal.userbrowser.passwordsdonotmatchpleaseretry.msg                             = Passwords do not match; please retry.
+angal.userbrowser.thepasswordhasbeenchanged.msg                                  = The password has been changed.
+angal.userbrowser.deleteuser.title                                               = Delete User
+angal.userbrowser.deleteuser.fmt.label                                           = Delete user "{0}"?
 
 # User Browser: related messages in CORE project
-angal.userbrowser.user.exists.fmt.msg                                            = The user "{0}" already exists.
-angal.userbrowser.cantdeleteadminuser.msg                                        = The "admin" user cannot be deleted.
+angal.userbrowser.theuseralreadyexists.fmt.msg                                   = The user "{0}" already exists.
+angal.userbrowser.theadminusercannotbedeleted.msg                                = The "admin" user cannot be deleted.
 
 ###########################
 # Settings: Groups Browser
@@ -170,22 +171,22 @@ angal.userbrowser.cantdeleteadminuser.msg                                       
 angal.groupsbrowser.title                                                        = Groups Browser
 angal.groupsbrowser.group.txt                                                    = Group
 angal.groupsbrowser.description.txt                                              = Description
-angal.groupsbrowser.delete.group.title                                           = Delete Group
-angal.groupsbrowser.delete.group.fmt.label                                       = Delete group "{0}"?
+angal.groupsbrowser.deletegroup.title                                            = Delete Group
+angal.groupsbrowser.deletegroup.fmt.label                                        = Delete group "{0}"?
 angal.groupsbrowser.groupmenu.btn                                                = GroupMenu
 angal.groupsbrowser.groupmenu.btn.key                                            = M
-angal.groupsbrowser.new.title                                                    = New Group
-angal.groupsbrowser.edit.title                                                   = Edit Group
+angal.groupsbrowser.newgroup.title                                               = New Group
+angal.groupsbrowser.editgroup.title                                              = Edit Group
 angal.groupsbrowser.groupname.label                                              = Group Name:
 angal.groupsbrowser.description.label                                            = Description:
-angal.groupsbrowser.nousergroup.msg                                              = Please insert a valid user group name.
+angal.groupsbrowser.pleaseinsertavalidusergroupname.msg                          = Please insert a valid user group name.
 angal.groupsbrowser.menuitembrowser.title                                        = Menu Item Browser
-angal.groupsbrowser.menuitemmbrowser.root.txt                                    = Main Menu
+angal.groupsbrowser.mainmenu.txt                                                 = Main Menu
 
 # Groups Browser: related messages in CORE project
-angal.groupsbrowser.cantdeleteadmingroup.msg                                    = The "admin" group cannot be deleted.
-angal.groupsbrowser.grouphasusers.msg                                           = This group has users and cannot be deleted.
-angal.groupsbrowser.groupexists.fmt.msg                                         = The group "{0}" already exists.
+angal.groupsbrowser.theadmingroupcannotbedeleted.msg                            = The "admin" group cannot be deleted.
+angal.groupsbrowser.thisgrouphasusersandcannotbedeleted.msg                     = This group has users and cannot be deleted.
+angal.groupsbrowser.thegroupalreadyexists.fmt.msg                               = The group "{0}" already exists.
 
 
 ##########################################################
