OP-515 resource bundle changes for Core version of OP-515

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -230,6 +230,26 @@ angal.admission.date.border                                                     
 
 angal.admission.pleaseselecttwopatients.msg                                      = Please select two patients.
 
+# Admission related messages in Core project
+angal.admission.controldaten2controldaten1notfound.msg                           = Control date n.2: control date n.1 not found.
+angal.admission.controln1datenodeliverydatefound.msg                             = Control n.1 date: no delivery date found.
+angal.admission.dischargedatemustbeafteradmissiondate.msg                        = The discharge date must be after the admission date.
+angal.admission.futuredatenotallowed.msg                                         = A date in the future is not allowed, please insert a valid discharge date.
+angal.admission.ininserteddatepatientwasalreadyadmitted.msg                      = The in inserted date patient was already admitted.
+angal.admission.intheselecteddatepatientwasadmittedagain.msg                     = The in selected date patient was admitted again, please insert a valid discharge date.
+angal.admission.pleaseinsertacorrectprogressiveid.msg                            = Please insert a correct progressive id.
+angal.admission.pleaseinsertadischargedate.msg                                   = Please insert a discharge date.
+angal.admission.pleaseinsertavalidabortdate.msg                                  = Please insert a valid abort date.
+angal.admission.pleaseinsertavalidcontroln1date.msg                              = Please insert a valid control n.1 date.
+angal.admission.pleaseinsertavalidcontroln2date.msg                              = Please insert a valid control n.2 date.
+angal.admission.pleaseinsertavaliddeliverydate.msg                               = Please insert a valid delivery date.
+angal.admission.pleaseinsertavalidvisitdate.msg                                  = Please insert a valid visit date.
+angal.admission.pleaseinsertavalidweightvalue.msg                                = Please insert a valid weight value
+angal.admission.pleaseselectatleastfirstdiagnosisout.msg                         = Please select at least the first Diagnosis -OUT-.
+angal.admission.youareeditinganoldadmission.msg                                  = You are editing an old admission.
+angal.admission.invalidadmissionperiod.fmt.msg                                   = Invalid admission period: the admission between\n {0} and {1} already exists.
+
+
 #########################
 # Settings: User Browser
 #########################
@@ -310,8 +330,6 @@ angal.admission.cannotmergeadmittedpatients                                     
 angal.admission.cannotmergewithpendingbills                                      = Cannot merge with pending bills
 angal.admission.check.operationdate                                              = Please check the operations dates
 angal.admission.continue                                                         = Continue?
-angal.admission.controldaten2controldaten1notfound                               = Control date n.2: control date n.1 not found
-angal.admission.controln1datenodeliverydatefound                                 = Control n.1 date: no delivery date found
 angal.admission.count                                                            = Count
 angal.admission.deleteadmission                                                  = Delete admission
 angal.admission.deleteselectedadmission                                          = Delete selected admission?
@@ -324,7 +342,6 @@ angal.admission.diagnosisoutm                                                   
 angal.admission.diagnosisoutsameasdiagnosisin                                    = Diagnosis OUT same as Diagnosis IN?
 angal.admission.differentnames                                                   = Different names
 angal.admission.discharge                                                        = DISCHARGE
-angal.admission.dischargedatemustbeafteradmissiondate                            = Discharge date must be after admission date
 angal.admission.doyouwanttooverwritethedata                                      = Do you want to overwrite the data?
 angal.admission.editadmission                                                    = Edit admission
 angal.admission.editadmissionrecord                                              = Edit admission record
@@ -333,10 +350,7 @@ angal.admission.fatherisalive                                                   
 angal.admission.fatherisdead                                                     = Father is dead 
 angal.admission.female                                                           = Female
 angal.admission.filtering                                                        = Filtering....
-angal.admission.futuredatenotallowed                                             = future date not allowed, please insert a valid discharge date
 angal.admission.indicatesrequiredfields                                          = * Indicates required fields
-angal.admission.ininserteddatepatientwasalreadyadmitted                          = in inserted date patient was already admitted
-angal.admission.intheselecteddatepatientwasadmittedagain                         = in the selected date patient was admitted again, please insert a valid discharge date
 angal.admission.invalidadmissionperiod                                           = invalid admission period:  
 angal.admission.invalidoperationdate                                             = Invalid operation date:
 angal.admission.levelis                                                          = Level is 
@@ -378,27 +392,18 @@ angal.admission.patientfolder.thepatientisnotyetdischarged                      
 angal.admission.patientmustbeafemale                                             = Patient must be a female
 angal.admission.patientscannothavependingtask                                    = Patients cannot have pending tasks
 angal.admission.patientsummary                                                   = Patient summary
-angal.admission.pleaseinsertacorrectprogressiveid                                = Please insert a correct progressive id
-angal.admission.pleaseinsertadischargedate                                       = Please insert a discharge date
-angal.admission.pleaseinsertavalidabortdate                                      = Please insert a valid abort date
 angal.admission.pleaseinsertavalidabortdatebetween                               = Please insert a valid abort date\n (between admission and discharge/today)
 angal.admission.pleaseinsertavalidadmissiondate                                  = Please insert a valid admission date
-angal.admission.pleaseinsertavalidcontroln1date                                  = Please insert a valid control n.1 date
 angal.admission.pleaseinsertavalidcontroln1datebetween                           = Please insert a valid control n.1 date\n (between delivery and discharge/today)
-angal.admission.pleaseinsertavalidcontroln2date                                  = Please insert a valid control n.2 date
 angal.admission.pleaseinsertavalidcontroln2datebetween                           = Please insert a valid control date n.2\n (between control 1 and discharge/today)
-angal.admission.pleaseinsertavaliddeliverydate                                   = Please insert a valid delivery date
 angal.admission.pleaseinsertavaliddeliverydatebetween                            = Please insert a valid delivery date\n (between admission and discharge/today)
 angal.admission.pleaseinsertavaliddischargedate                                  = Please insert a valid discharge date
 angal.admission.pleaseinsertavalidoperationdate                                  = Please insert a valid operation date
 angal.admission.pleaseinsertavalidoperationdatebetween                           = Please insert a valid operation date\n (between admission and discharge/today)
 angal.admission.pleaseinsertavalidunitvalue                                      = please insert a valid unit value
-angal.admission.pleaseinsertavalidvisitdate                                      = Please insert a valid visit date
 angal.admission.pleaseinsertavalidvisitdatebetween                               = Please insert a valid visit date\n (between admission and discharge/today)
-angal.admission.pleaseinsertavalidweightvalue                                    = Please insert a valid weight value
 angal.admission.pleaseinsertavalidweightvaluemust                                = Please insert a valid weight value (must be greater than zero)
 angal.admission.pleaseselectatleastfirstdiagnosisin                              = Please select at least first Diagnosis -IN-
-angal.admission.pleaseselectatleastfirstdiagnosisout                             = Please select at least first Diagnosis -OUT-
 angal.admission.pleaseselectavalidadmissiondate                                  = Please select a valid admission type
 angal.admission.pleaseselectavaliddischargetype                                  = Please select a valid discharge type
 angal.admission.pleaseselectavaliddiseasein                                      = Please select a valid Malattia -IN-
@@ -438,7 +443,6 @@ angal.admission.wardwithnobedsavailable                                         
 angal.admission.weneed                                                           = we need
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = will be deleted and his/her history transfered to the Patient
 angal.admission.withthisoperationthepatient                                      = With this operation the Patient
-angal.admission.youareeditinganoldadmission                                      = You are editing an old admission
 angal.admtype.admissiontypebrowsing                                              = Admission type browsing
 angal.admtype.codemaxchars                                                       = Code (max 10 chars)
 angal.admtype.codetoolongmaxchars                                                = Code too long (max 10 chars)
