OP-536 review comment changes

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -71,9 +71,7 @@ angal.common.pleaseselectapatient.msg                                           
 angal.common.thiscouldretrievealargeamountofdataproceed.msg                      = This could retrieve a large amount of data, proceed?
 angal.common.thecodeisalreadyinuse.msg                                           = The code is already in use.
 angal.common.pleaseinsertavaliddescription.msg                                   = Please insert a valid description.
-angal.common.thecodeistoolongmax10chars.msg                                      = The code is too long (max. 10 chars).
-angal.common.thecodeistoolongmax3chars.msg                                       = The code is too long (max. 3 chars).
-angal.common.thecodeistoolongmax2chars.msg                                       = The code is too long (max. 2 chars).
+angal.common.thecodeistoolongmaxchars.fmt.msg                                    = The code is too long (max. {0} chars).
 angal.common.thecodeistoolongmax1char.msg                                        = The code is too long (max. 1 char).
 angal.common.pleaseinsertacode.msg                                               = Please insert a code.
 
@@ -816,7 +814,7 @@ angal.sql.problemsoccurredwiththesqlinstruction.msg                             
 angal.sql.problemsoccurredwithserverconnection.msg                               = Problems occurred with server connection.
 angal.sql.theselecteditemisstillusedsomewhere.msg                                = The selected item is still used somewhere.
 # DbSingleConn
-angal.utils.databaseserverstoppedornetworkfailure.msg                            = Database server stopped or network failure.
+angal.sql.databaseserverstoppedornetworkfailure.msg                             = Database server stopped or network failure.
 # DbSingleJpaConn
 # OHExceptionTranslator
 angal.sql.constraintviolation.msg                                                = Constraint violation.
