OP-536 review comment changes

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -91,7 +91,10 @@ angal.common.alltypes.txt                                                       
 angal.common.arterialpressureabbr.txt                                            = AP
 angal.common.city.txt                                                            = City
 angal.common.code.txt                                                            = Code
+angal.common.codemaxchars.fmt.txt                                                = Code (max {0} chars)
+angal.common.codemax1char.txt                                                    = Code (max 1 char)
 angal.common.date.txt                                                            = Date
+angal.common.description.txt                                                     = Description
 angal.common.female.txt                                                          = Female
 angal.common.from.txt                                                            = From
 angal.common.height.txt                                                          = Height
@@ -935,7 +938,6 @@ angal.admission.wardis                                                          
 angal.admission.weneed                                                           = we need
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = will be deleted and his/her history transfered to the Patient
 angal.admission.withthisoperationthepatient                                      = With this operation the Patient
-angal.admtype.codemaxchars                                                       = Code (max 10 chars)
 angal.admtype.deleterow                                                          = Delete row
 angal.agetype.child                                                              = Child
 angal.agetype.deleterow                                                          = Delete record
@@ -1052,11 +1054,9 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                     = Series number
 angal.dicom.thumbnail.study                                                      = Study
 angal.dicomtype.codem                                                            = Code
-angal.dicomtype.codemaxchars                                                     = Code (max 3 chars)
 angal.dicomtype.deleterow                                                        = Delete row
 angal.dicomtype.youcannotdeletethisrecord                                        = You can not delete this record
 angal.disctype.codem                                                             = Code
-angal.disctype.codemaxchars                                                      = Code (max 10 chars)
 angal.disctype.deleterow                                                         = Delete row
 angal.disease.allm                                                               = ALL
 angal.disease.deletedisease                                                      = Delete disease
@@ -1070,13 +1070,10 @@ angal.disease.select                                                            
 angal.disease.selecttype                                                         = Select type
 angal.disease.type                                                               = Type
 angal.disease.typem                                                              = TYPE 
-angal.distype.codemaxchars                                                       = Code (max 2 chars)
 angal.distype.deletediseasetype                                                  = Delete disease type
 angal.distype.pleaseinsertavaliddescription                                      = Please insert a valid description
-angal.dlvrrestype.codemaxchars                                                   = Code (1 char)
 angal.dlvrrestype.deletedeliveryresulttype                                       = Delete delivery result type 
 angal.dlvrrestype.pleaseinsertavaliddescription                                  = Please insert a valid description
-angal.dlvrtype.codemaxchars                                                      = Code (1 char)
 angal.dlvrtype.deletedeliverytype                                                = Delete delivery type
 angal.dlvrtype.pleaseinsertavaliddescription                                     = Please insert a valid description
 angal.dlvrtype.thdatacouldnotbesaved                                             = The data could not be saved
@@ -1128,7 +1125,6 @@ angal.examination.tooltip.toggleexamination                                     
 angal.examination.weight                                                         = Weight
 angal.examination.weightabbr                                                     = (W)
 angal.exams.find                                                                 = Search
-angal.exatype.codemaxchars                                                       = Code (max 2 chars)
 angal.exatype.deleteexamtype                                                     = Delete exam type
 angal.exatype.pleaseinsertavaliddescription                                      = Please insert a valid description
 angal.genericreportbill.doyouwanttoprintreceipt                                  = Do you want to print a receipt?
@@ -1488,13 +1484,11 @@ angal.medicalstockwardedit.tooltip.changethepatientassociatedwiththismovement   
 angal.medicalstockwardedit.tooltip.removepatientassociationwiththismovement      = Remove Patient association with this movement
 angal.medicalstockwardedit.updateageandweightforthispatient                      = Update Age and Weight for this Patient?
 angal.medicalstockwardedit.weight                                                = Weight
-angal.medstockmovtype.codemaxchars                                               = Code (max 10 chars)
 angal.medstockmovtype.deletemovementtype                                         = Delete movement type 
 angal.medstockmovtype.pleaseinsertavaliddescription                              = Please insert a valid description
 angal.medstockmovtype.pleaseinsertavalidtype                                     = Please insert a valid type
 angal.medstockmovtype.type                                                       = Type
 angal.medstockmovtype.typem                                                      = TYPE
-angal.medtype.codemaxchars                                                       = Code (max 1 char)
 angal.medtype.deletemedicaltype                                                  = Delete Medical Type
 angal.medtype.pleaseinsertavaliddescription                                      = Please insert a valid description
 angal.menu.all                                                                   = ALL
@@ -1596,7 +1590,6 @@ angal.operationrowlist.date                                                     
 angal.operationrowlist.errosdel                                                  = Error occurs during processing
 angal.operationrowlist.natureop                                                  = Operation designation 
 angal.operationrowlist.successdel                                                = Operation deleted
-angal.opetype.codemaxchars                                                       = Code (max 2 chars)
 angal.opetype.deleteoperationtype                                                = Delete Operation Type
 angal.opetype.pleaseinsertavaliddescription                                      = Please insert a valid description
 angal.patient.address                                                            = Address
@@ -1709,7 +1702,6 @@ angal.patvac.vaccinedate                                                        
 angal.patvac.vaccinem                                                            = VACCINE
 angal.patvac.vaccinetype                                                         = Vaccine Type
 angal.patvac.vaccinetypem                                                        = VACCINE TYPE
-angal.preagtreattype.codemaxchars                                                = Code (max 10 chars)
 angal.preagtreattype.deletetreatmenttype                                         = Delete Treatment Type   
 angal.preagtreattype.description                                                 = Description   
 angal.preagtreattype.pleaseinsertavaliddescription                               = Please insert a valid description
@@ -1903,7 +1895,6 @@ angal.therapy.warning                                                           
 angal.therapy.weeks                                                              = Weeks
 angal.vaccine.all                                                                = ALL
 angal.vaccine.childm                                                             = CHILD
-angal.vaccine.codemaxchars                                                       = Code (max 10 chars)
 angal.vaccine.deletevaccine                                                      = Delete vaccine
 angal.vaccine.doyouwanttooverwritethedata                                        = Do you want to overwrite the data
 angal.vaccine.notpregnantm                                                       = NOT PREGNANT
@@ -1914,7 +1905,6 @@ angal.vaccine.requiredfields                                                    
 angal.vaccine.select                                                             = Select
 angal.vaccine.selectavaccinetype                                                 = Select type
 angal.vaccine.vaccinetype                                                        = Type
-angal.vactype.codemaxchars                                                       = Code (max 1 chars)
 angal.vactype.deletevaccinetype                                                  = Delete vaccine type
 angal.vactype.pleaseinsertavaliddescription                                      = Please insert a valid description
 angal.video.devices                                                              = Devices
